fix to main menu on small screens

--- a/app/assets/stylesheets/application/components/header.scss
+++ b/app/assets/stylesheets/application/components/header.scss
@@ -238,6 +238,7 @@ header {
   @include breakpoint(small only) {
     position: fixed;
     bottom: 0;
+    margin-bottom: 0;
     width: 100%;
     z-index: 1000;
     ul {
